--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,4 +14,6 @@ jobs:
 
       - name: Run tests
         working-directory: ${{ runner.workspace }}
-        run: ./izhevsk/vendor/bin/phpunit
+        run: |
+          cd izhevsk
+          ./vendor/bin/phpunit
