--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,9 +21,10 @@ jobs:
       - name: Checkout PHP
         uses: docker://php:latest
 
+      - name: Install dependencies
+        if: ${{ steps.Cache PHP dependencies.outputs.cache-hit == false }}
+        run: cd izhevsk && composer install
+
       - name: Run tests
         working-directory: ${{ runner.workspace }}
-        run: |
-          cd izhevsk && \
-          composer install && \
-          ./vendor/bin/phpunit
+        run: cd izhevsk && ./vendor/bin/phpunit
