--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,7 +22,7 @@ jobs:
         uses: docker://php:latest
 
       - name: Install dependencies
-        if: {{ steps.Cache PHP dependencies.outputs.cache-hit == false }}
+        if: {{ ${{ steps.Cache PHP dependencies.outputs.cache-hit }} == false }}
         run: cd izhevsk && composer install
 
       - name: Run tests
