--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,9 +24,7 @@ jobs:
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit == false
-        run: |
-          ls -lh && \
-          composer install -d ./izhevsk
+        run: composer install
 
       - name: Run tests
         working-directory: ${{ runner.workspace }}
